# smart-wallet-ui

./: .env  .env.client.example  .env.example  .gitignore  MIGRATION.md  README.md  api-server.ts  app.ts  email.html  index.html  index.ts  manifest.json  manifest.json.bak  package-lock.json  package.json  reload-prod.sh  reload.sh  ser.js.bak  success.html  transaction.html  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
atlas/: CHANGELOG.md  cabal.project  my_config.yaml  readme.md  zkfold-smart-contract-wallet-server.cabal
atlas/app/: Main.hs
atlas/src/ZkFold/Cardano/SmartWallet/: Api.hs  Constants.hs  Types.hs
atlas/src/ZkFold/Cardano/SmartWallet/Types/: Validator.hs
atlas/web/openapi/: api.yaml
atlas/zkfold-smart-wallet-api/: zkfold-smart-wallet-api.cabal
atlas/zkfold-smart-wallet-api/data/compiled-scripts/: smart-wallet.plutus
atlas/zkfold-smart-wallet-api/src/ZkFold/Cardano/SmartWallet/: Api.hs  Constants.hs  Orphans.hs  Types.hs
atlas/zkfold-smart-wallet-api/src/ZkFold/Cardano/SmartWallet/Api/: Batch.hs  Create.hs  Send.hs
atlas/zkfold-smart-wallet-api/src/ZkFold/Cardano/SmartWallet/Types/: Batch.hs  Common.hs  Create.hs  Errors.hs  Monad.hs  Register.hs  Script.hs  Send.hs
atlas/zkfold-smart-wallet-api/test/: Main.hs
atlas/zkfold-smart-wallet-api/test/ZkFold/Cardano/SmartWallet/: Test.hs
atlas/zkfold-smart-wallet-api/test/ZkFold/Cardano/SmartWallet/Test/: Batch.hs  Single.hs  Utils.hs
atlas/zkfold-smart-wallet-server-lib/: CHANGELOG.md  zkfold-smart-wallet-server-lib.cabal
atlas/zkfold-smart-wallet-server-lib/app/: Main.hs
atlas/zkfold-smart-wallet-server-lib/src/ZkFold/Cardano/SmartWallet/Server/: Api.hs  Auth.hs  Config.hs  Ctx.hs  ErrorMiddleware.hs  Options.hs  Orphans.hs  RequestLoggerMiddleware.hs  Run.hs  Tx.hs  Utils.hs
atlas/zkfold-smart-wallet-server-lib/src/ZkFold/Cardano/SmartWallet/Server/Api/: Settings.hs  Tx.hs  Utxo.hs  Wallet.hs
e2e/: .env  e2e.ts  email.html  failedTx.html  index.html  success.html  transaction.html
e2e-test/: README.md  package-lock.json  package.json
e2e-test/e2e/: e2e.ts  index.html  success.html  transaction.html
e2e/cert/: selfsigned.crt  selfsigned.key
public/css/: custom-wallet.css  custom.css
spa-client/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
spa-client/src/: App.css  App.tsx  index.css
spa-client/src/hooks/: useWallet.ts
spa-client/src/pages/Error/: Error.tsx
spa-client/src/pages/Home/: Home.tsx
spa-client/src/pages/OAuthCallback/: OAuthCallback.tsx  index.ts
spa-client/src/pages/Success/: Success.tsx  index.ts
spa-client/src/pages/Wallet/: Wallet.tsx
spa-client/src/services/: backendApi.ts  config.ts  cryptoService.ts  googleAuth.ts  walletService.ts
spa-client/src/types/: index.ts
src/: App.ts  Backend.ts  Blockfrost.ts  FbToken.ts  GMail.ts  GoogleToken.ts  Lucid.ts  Main.ts  Provider.ts  Types.ts  Wallet.ts  WalletManager.ts  app.ts  background.ts  cip30.ts  index.html  main.ts  types.ts  vite-env.d.ts
src/Services/: BackendService.ts
src/UI/: Error.ts  Failed.ts  Frame.ts  Header.ts  Init.ts  Router.ts  Seed.ts  Success.ts  Wallet.ts
src/Utils/: Address.ts  Assets.ts  EventEmitter.ts  Helpers.ts  JsonBig.ts  Storage.ts  Transactions.ts
src/Wallet/: GoogleAuth.ts  WalletManager.ts
src/services/: BackendService.ts
src/ui/: router.ts
src/utils/: EventEmitter.ts  helpers.ts  storage.ts
src/wallet/: GoogleAuth.ts  WalletManager.ts
typescript/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: Backend.ts  GMail.ts  GoogleToken.ts  Wallet.ts
