cabal-version: 3.4
name: zkfold-smart-wallet-api
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.SmartWallet.Api
    ZkFold.Cardano.SmartWallet.Api.Batch
    ZkFold.Cardano.SmartWallet.Api.Create
    ZkFold.Cardano.SmartWallet.Api.Send
    ZkFold.Cardano.SmartWallet.Constants
    ZkFold.Cardano.SmartWallet.Orphans
    ZkFold.Cardano.SmartWallet.Types
    ZkFold.Cardano.SmartWallet.Types.Batch
    ZkFold.Cardano.SmartWallet.Types.Common
    ZkFold.Cardano.SmartWallet.Types.Create
    ZkFold.Cardano.SmartWallet.Types.Errors
    ZkFold.Cardano.SmartWallet.Types.Monad
    ZkFold.Cardano.SmartWallet.Types.Script
    ZkFold.Cardano.SmartWallet.Types.Send

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    atlas-cardano,
    base >=4.18.2.1 && <5,
    base16-bytestring,
    bytestring,
    cardano-api,
    containers,
    data-default,
    deriving-aeson,
    http-types,
    lens,
    mtl,
    plutus-tx,
    swagger2,
    symbolic-base,
    symbolic-cardano,
    text,
    zkfold-cardano,
    zkfold-cardano-scripts-common,

  hs-source-dirs: src

test-suite zkfold-smart-contract-wallet-server-test
  import: common
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ZkFold.Cardano.SmartWallet.Test
    ZkFold.Cardano.SmartWallet.Test.Utils

  build-depends:
    RSA <1.1,
    atlas-cardano,
    base,
    bytestring,
    containers,
    cryptohash-sha256,
    mtl,
    random,
    symbolic-base,
    tasty,
    tasty-hunit,
    text,
    zkfold-smart-wallet-api,
