cabal-version: 3.4
name: zkfold-smart-wallet-server-lib
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.SmartWallet.Server.Auth
    ZkFold.Cardano.SmartWallet.Server.Config
    ZkFold.Cardano.SmartWallet.Server.Ctx
    ZkFold.Cardano.SmartWallet.Server.ErrorMiddleware
    ZkFold.Cardano.SmartWallet.Server.Options
    ZkFold.Cardano.SmartWallet.Server.Run

  -- other-modules:
  -- other-extensions:
  build-depends:
    -- TODO: Possible to get rid of `plutus-ledger-api` by defining higher types?
    aeson,
    atlas-cardano,
    base ^>=4.18.2.1,
    bytestring,
    deriving-aeson,
    envy,
    file-embed,
    filepath,
    fmt,
    http-types,
    lens,
    mtl,
    optparse-applicative,
    plutus-ledger-api,
    plutus-tx,
    servant-server,
    text,
    time-manager,
    wai,
    warp,
    yaml,
    zkfold-smart-wallet-api,

  hs-source-dirs: src

executable zkfold-smart-wallet-server
  import: common
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.18.2.1,
    optparse-applicative,
    zkfold-smart-wallet-server-lib,

  hs-source-dirs: app