cabal-version: 3.12
name: zkfold-smart-wallet-server-lib
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Sourabh Aggarwal
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.SmartWallet.Server.Api
    ZkFold.Cardano.SmartWallet.Server.Api.Settings
    ZkFold.Cardano.SmartWallet.Server.Api.Tx
    ZkFold.Cardano.SmartWallet.Server.Api.Wallet
    ZkFold.Cardano.SmartWallet.Server.Auth
    ZkFold.Cardano.SmartWallet.Server.Config
    ZkFold.Cardano.SmartWallet.Server.Ctx
    ZkFold.Cardano.SmartWallet.Server.ErrorMiddleware
    ZkFold.Cardano.SmartWallet.Server.Options
    ZkFold.Cardano.SmartWallet.Server.Orphans
    ZkFold.Cardano.SmartWallet.Server.RequestLoggerMiddleware
    ZkFold.Cardano.SmartWallet.Server.Run
    ZkFold.Cardano.SmartWallet.Server.Utils

  other-modules:
    PackageInfo_zkfold_smart_wallet_server_lib

  autogen-modules:
    PackageInfo_zkfold_smart_wallet_server_lib

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    atlas-cardano,
    base,
    binary,
    bytestring,
    data-default,
    deriving-aeson,
    envy,
    fast-logger,
    filepath,
    fmt,
    http-types,
    insert-ordered-containers,
    lens,
    mtl,
    openapi3,
    optparse-applicative,
    servant-foreign,
    servant-openapi3,
    servant-server,
    swagger2,
    text,
    time,
    time-manager,
    wai,
    wai-extra,
    warp,
    yaml,
    zkfold-smart-wallet-api,

  hs-source-dirs: src

executable zkfold-smart-wallet-server
  import: common
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base,
    optparse-applicative,
    zkfold-smart-wallet-server-lib,

  hs-source-dirs: app